Bug 316543 - crash [@ mozSpellChecker::mozSpellChecker] when opening message compose window.  Patch by Adam Guthrie <ispiked@gmail.com>, r=timeless, sr=mscott