extensions/spellcheck/src/mozSpellChecker.h
@@ -55,6 +55,8 @@ public:
   mozSpellChecker();
   virtual ~mozSpellChecker();
 
+  nsresult Init();
+
   // nsISpellChecker
   NS_IMETHOD SetDocument(nsITextServicesDocument *aDoc, PRBool aFromStartofDoc);
   NS_IMETHOD NextMisspelledWord(nsAString &aWord, nsStringArray *aSuggestions);
